tests/neg/inline-position/A_1.scala
object A {

  rewrite def f(x: => Object) = (x, x)

}